Add interaction with unauthenticated user

--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -1,45 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.admin.AdminMainActivity">
 
     <TextView
-        android:id="@+id/textView3"
         style="@style/Text.TextView"
-        android:text="Панель Администратора"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Панель Администратора" />
 
     <Button
         android:id="@+id/addCar"
         style="@style/Button.NoScroll"
         android:layout_marginTop="140dp"
-        android:text="Добавить авто"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:layout_marginBottom="0dp"
+        android:text="Добавить авто" />
+
     <Button
         android:id="@+id/observeUsers"
         style="@style/Button.NoScroll"
         android:layout_marginTop="20dp"
-        android:text="Поиск пользователей"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addCar" />
+        android:layout_marginBottom="0dp"
+        android:text="Поиск пользователей"/>
 
-<!--    <Button-->
-<!--        android:id="@+id/button2"-->
-<!--        style="@style/Button.NoScroll"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:text="Выйти из аккаунта"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/observeUsers" />-->
+    <Button
+        android:id="@+id/logout"
+        style="@style/Button.NoScroll"
+        android:layout_marginTop="20dp"
+        android:text="Выйти из аккаунта"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
