--- a/app/src/main/res/anim/shrink_and_opacity_transition.xml
+++ b/app/src/main/res/anim/shrink_and_opacity_transition.xml
@@ -6,11 +6,15 @@
 <!--        />-->
     <scale
         android:duration="1500"
-        android:fromXScale="0.5"
-        android:fromYScale="0.5"
+        android:fromXScale="1.5"
+        android:fromYScale="1.5"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toXScale="1.5"
-        android:toYScale="1.5"
+        android:toXScale="1.0"
+        android:toYScale="1.0"
         />
+    <alpha
+        android:duration="1500"
+        android:fromAlpha="50"
+        android:toAlpha="100"/>
 </set>
