Minor code improvements

--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -122,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:autofillHints="username"
                     android:ems="10"
-                    android:inputType="number"/>
+                    android:inputType="text"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
