--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.MyAccountActivity">
+    tools:context=".activity.account.MyAccountActivity">
 
     <TextView
         android:id="@+id/loginText"
